2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Use constraints bounds.
	* src/ipopt.cc: Use constraint bounds.
	* src/solver.hh: Clean constraints type.

2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement bounded variable in Solver and IpoptSolver.
	* .gitignore: Do not commit testsuite.log.
	* doc/Doxyfile.in: Do not search for doc in tarballs/packages.
	* doc/Makefile.am: Pass PACKAGE_TARNAME to Doxygen.
	* src/doc.hh: Document detail namespace.
	* src/dummy.cc,
	* src/dummy.hh: Fix documentation.
	* src/ipopt.cc: Implement bounds.
	* src/ipopt.hh: New.
	* src/optimization-fwd.hh: Fix documentation.
	* src/solver.cc,
	* src/solver.hh: Implement bounds.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add constraints definition.
	* src/solver.cc,
	* src/solver.hh: Add types and getter/setter.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add gradient function.
	* src/dummy.cc: Add optional gradient to constructor.
	* src/ipopt.cc: Use gradient in Ipopt if possible.
	* src/solver.cc,
	* src/solver.hh: Handle optional gradient.
	* tests/ipopt.cc: Add problem specific gradient.
	* tests/simple-test.cc: Do not use gradient.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add the possibility to set a starting point.
	* src/ipopt.cc: Use the starting point if possible.
	* src/solver.cc,
	* src/solver.hh: Add setStartingPoint method.
	* tests/ipopt.cc: Factorize type transformations.
	* tests/ipopt.stdout: Update from reference.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Make getMinimum lazy.
	* src/dummy.cc: Precompute result in constructor.
	* src/ipopt.cc: Make getMinimum lazy.
	* src/solver.cc: Initialize all fields in constructor.
	* src/solver.hh: Add NoSolution as a possibility in result.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Optimize arguments copy.
	* TODO: Update item.
	* src/ipopt.cc: Use memcpy to copy data.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>
